--- a/Sprintr.client/src/assets/scss/_variables.scss
+++ b/Sprintr.client/src/assets/scss/_variables.scss
@@ -4,7 +4,7 @@ $secondary: #ff3697;
 $danger: #eb5757;
 $success: #27ae60;
 $warning: #ff7f50;
-$info: #00c9bd;
+$info: #144561;
 $dark: #313130;
 $grey: #cbcbcb;
 $dark-grey: #696969;
